welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:12: error: ';' expected but 'else' found.
			else if (litMessage()=='I'){
                        ^